# SpaceSim

./: .gitignore  BRAINSTORMING.md  CMakeLists.txt  README.md
include/spacesim/app/: Application.hpp
include/spacesim/core/: Body.hpp  PhysicsEngine.hpp  ScenarioLoader.hpp  SimulationConfig.hpp  Vec3.hpp  World.hpp
include/spacesim/render/: HudState.hpp  IRenderer.hpp  Renderer2D.hpp  Renderer2DOpenGL.hpp  Renderer3D.hpp  Renderer3DOpenGL.hpp  TerminalRenderCommon.hpp  WindowCommandBridge.hpp
objects/scenarios/: asteroid_field.txt  binary_blackhole.txt  binary_orbit.txt  binary_system.txt  collision_aggressive.txt  collision_asteroids.txt  collision_close_approach.txt  collision_immediate.txt  collision_simple_test.txt  collision_solar_scale.txt  collision_test_heavy.txt  collision_touching.txt  collision_within_threshold.txt  five_body_3d_chaos.txt  solar_blackhole_demo.txt  solar_system_mini.txt  test_scenario.txt  triple_star_hierarchical.txt
src/: main.cpp
src/app/: Application.cpp
src/core/: PhysicsEngine.cpp  ScenarioLoader.cpp
src/render/: HudState.cpp  Renderer2D.cpp  Renderer2DOpenGL.cpp  Renderer3D.cpp  Renderer3DOpenGL.cpp  WindowCommandBridge.cpp
